Fixed centering on projects when on mobile

--- a/src/components/Skills/skills.css
+++ b/src/components/Skills/skills.css
@@ -16,3 +16,14 @@
 .custom-btn:hover {
 	background: #339699 !important;
 }
+
+/* Smartphones (portrait and landscape) ----------- */
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
+	.skill-header {
+		font-size: 1rem;
+	}
+
+	.skill-text {
+		font-size: 0.8rem;
+	}
+}
